--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,11 @@ repositories {
 dependencies {
     compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.3'
     compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.3'
-    compile group: 'org.swinglabs', name: 'pdf-renderer', version: '1.0.5'
+    compile group: 'org.apache.commons.logging', name: 'commons-logging', version: '1.2'
+    compile group: 'org.apache.pdfbox', name: 'fontbox', version: '2.0.0-20150919.115914-1736'
+    compile group: 'org.apache.pdfbox', name: 'jempbox', version: '2.0.0-20140823.120514-532'
+    compile group: 'org.apache.pdfbox', name: 'pdfbox', version: '2.0.0-20150919.120035-1683'
+    compile group: 'org.apache.pdfbox', name: 'xmpbox', version: '2.0.0-20150919.115930-1722'
 }
 
 sourceCompatibility = 8
